# soc-trilemma-benchmark

./: .dockerignore  .gitignore  Dockerfile  README.md  VALIDATION_CHECKLIST.md  VALIDATION_SUMMARY.md  inference.py  openenv.yaml  pre_submit_check.py  pyproject.toml  requirements.txt  validate.py
.github/workflows/: ci.yml
app/: app.py  config.py  dpi_loader.py  episode_grader.py  exceptions.py  kill_chain.py  models.py  pretty_printer.py  seed_engine.py  session_manager.py  soc_grader.py
data/: dpi_exfiltration.json  dpi_lateral_movement.json  dpi_recon.json
server/: app.py
tasks/: easy.yaml  expert.yaml  hard.yaml  medium.yaml  very_easy.yaml  very_hard.yaml
tests/: adversarial_suite.py
tests/integration/: test_baseline_agent.py  test_http_endpoints.py  test_websocket.py
tests/property/: test_properties.py
tests/unit/: test_kill_chain.py  test_pretty_printer.py  test_seed_engine.py  test_session_manager.py  test_soc_grader.py  test_task_config.py
